src/test/c/accept/33-interface.arcx
interface MyInterface is Something {
    @exposed
    foo: int;

    @exposed
    bar: string;
} 