src/test/c/reject/39-class-inheritance-implements-error.arcx
class Hijo is Padre using {
    foo: int = 1;
} 